id type number in form html, already user persist in bd in POST (DAO and model package created)

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
-	<h1>LOGIN UP</h1>
+	<h1>SIGN UP</h1>
 
 	<form action="http://localhost:8080/Simple_RestFul_WebApplication/apiRest/user/add" method="POST">
 		<p>Name: </p><input type="text" name="name"></n>
-		<p>email: </p><input type="text" name="email"></n>
-		<p>id: </p><input type="text" name="id"></n>
+		<p>email: </p><input type="email" name="email"></n>
+		<p>id: </p><input type="number" name="id"></n>
 		<input type="submit" value="Add User" />
 	</form>
 
